--- a/app/src/main/res/layout/sign_in_activity.xml
+++ b/app/src/main/res/layout/sign_in_activity.xml
@@ -84,6 +84,7 @@
         android:backgroundTint="@color/colorBgImage"
         android:ems="10"
         android:hint="@string/email"
+        android:lines="1"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
         android:textColor="@color/borderColor"
@@ -103,6 +104,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="@color/colorBgImage"
+        android:lines="1"
         android:ems="10"
         android:hint="@string/password"
         android:paddingStart="5dp"
